# image_recognation

./: .gitignore  Readme.md  app.py  main.py  pyproject.toml
src/: __init__.py  data_preparation.py  dataset.py  evaluate.py  predict.py  train.py
